force-app/main/default/objects/Action_Plan_Template_Version__c/Action_Plan_Template_Version__c.object-meta.xml
<CustomObject>
    <label>Action Plan Template Version</label>
    <nameField>
        <displayFormat>APTV-{00000000}</displayFormat>
        <label>Action Plan Template Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Template Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>