force-app/main/default/objects/Action_Plan_Template_Version__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template</label>
    <referenceTo>Action_Plan_Template__c</referenceTo>
    <relationshipLabel>Action Plan Template Versions</relationshipLabel>
    <relationshipName>APTV2APT</relationshipName>
    <type>Lookup</type>
</CustomField>