force-app/main/default/objects/Action_Plan_Template_Version__c/fields/Activation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Activation_Datetime__c</fullName>
    <label>Activation Datetime</label>
    <type>DateTime</type>
</CustomField>