force-app/main/default/objects/Action_Plan_Template_Version__c/fields/Inactivation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Inactivation_Datetime__c</fullName>
    <label>Inactivation Datetime</label>
    <type>DateTime</type>
</CustomField>